@@ -1,7 +1,6 @@
 * deprecations
-  * sign_out_all_scopes defaults to true as security measure
-  * http authenticatable is disabled by default
   * cookie_domain is deprecated in favor of cookie_options
+  * after_update_path_for can no longer be defined in ApplicationController
 
 * enhancements
   * Added OAuth 2 support
@@ -15,6 +14,11 @@
   * Store the salt in session and expire the session if the user changes his password
   * Allow :stateless_token to be set to true avoiding users to be stored in session through token authentication
   * cookie_options uses session_options values by default
+  * Sign up now check if the user is active or not and redirect him accordingly setting the inactive_signed_up message
+
+* default behavior changes
+  * sign_out_all_scopes defaults to true as security measure
+  * http authenticatable is disabled by default
 
 * bugfix
   * after_sign_in_path_for always receives a resource
